@@ -8,6 +8,7 @@
 - Make simple left aligned numbering of textfield renderers work again.
 - Added "maxlength" attribute to textareas. If set a small indicator is shown
   below the textfield counting the remaining chars.
+- Gray out sections and text areas too if a conditional is inactive.
 
 0.17.5
 ======
